# dnos-kdev

./: .pre-commit-config.yaml  README.rst  dnos-kdev  setup.cfg  test_main.py
ubuntu-bionic-docker/: Dockerfile  build-kpatch.sh
ubuntu-focal-docker/: Dockerfile  apt-from-librarian  apt-get-from-librarian
