[options]
install_requires=
    waiting

[options.extras_require]
test =
    pytest
hack =
    black
    isort
    mypy
    pre-commit

[metadata]
name = dnos-kdev

[mypy]
check_untyped_defs = true
files = *.py

[isort]
profile = black

[tox:tox]
envlist = py3

[testenv]
extras = test
commands = pytest {posargs}

[tool:pytest]
addopts =
